[package]
name = "regex-replace-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
glob = "0.3"
regex = "1"
rmcp = { version = "0.9", features = ["server", "transport-io"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
